fix overflow issue, !! major layout changes
see: https://trello.com/c/j9B2jBP0/189-fix-drawer-layout-on-mobile

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -11,8 +11,11 @@ html, body {
 
 // todo: move to utils stylesheet
 .full-height {
-  padding-top:75px;
-  height: 100%;
+  position: absolute;
+  top: 75px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 .ac-no-gutter {
@@ -58,12 +61,12 @@ html, body {
     }
   }
   &.scroll-nav--up {
-    z-index:1;
-    top: 75px;
+    position: relative;
     left: 50%;
     width: 60px;
     height: 60px;
     padding: 7px 0 0 15px;
+    z-index:1;
     i{
         padding-left: 5px;
     }
